--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal.cshtml
@@ -85,7 +85,7 @@
                                new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A" && Convert.ToString(DataBinder.Eval(tc.DataItem, "IdEstado_cierre")) == "ABI")
+                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A" && Convert.ToString(DataBinder.Eval(tc.DataItem, "IdEstadoAprobacion_cat")) == "APRO" && Convert.ToString(DataBinder.Eval(tc.DataItem, "IdEstado_cierre")) == "ABI")
                 {
                     ViewContext.Writer.Write(
                              Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdOrdenCompra = DataBinder.Eval(tc.DataItem, "IdOrdenCompra") },
