--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
@@ -569,8 +569,16 @@
                     </div>
                     <div class="col-md-2">
                         <div class="form-group">
-                            <label for="FechaOP">Fecha*</label>
-                            @Html.TextBoxFor(q => q.FechaOP, "{0:dd/MM/yyyy}", new { @id = "FechaOP", @class = "form-control" })
+                            <label for="FechaOP">Hasta*</label>
+                            @Html.DevExpress().DateEditFor(q => q.FechaOP, settings =>
+                           {
+                               settings.Name = "FechaOP";
+                               settings.Properties.UseMaskBehavior = true;
+                               settings.Properties.EditFormat = EditFormat.Date;
+                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                           }).GetHtml()
                             @Html.ValidationMessageFor(q => q.FechaOP, "", new { @class = "text-danger" })
                         </div>
                     </div>
