--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Anular.cshtml
@@ -153,12 +153,16 @@
         });
 
         function OnSelectedProductoChanged(s, e) {
-            GridView_egr_inv_det.GetEditor("IdUnidadMedida_sinConversion").PerformCallback();
-            SetUnidadMedida(s, e);
+            if (s.GetValue() != 0) {
+                GridView_egr_inv_det.GetEditor("IdUnidadMedida_sinConversion").PerformCallback();
+                SetUnidadMedida(s, e);
+            }
         }
 
         function UnidadMedidaComboBox_BeginCallback(s, e) {
-            e.customArgs["in_IdProducto"] = IdProducto.GetValue();
+            if (s.GetValue() != 0) {
+                e.customArgs["in_IdProducto"] = IdProducto.GetValue();
+            }
         }
 
         function SetUnidadMedida(s, e) {
