--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventarioOrdenCompra/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventarioOrdenCompra/Anular.cshtml
@@ -147,12 +147,16 @@
         });
 
         function OnSelectedProductoChanged(s, e) {
-            GridViewPartial_inv_det.GetEditor("IdUnidadMedida_sinConversion").PerformCallback();
-            SetUnidadMedida(s, e);
+            if (s.GetValue() != 0) {
+                GridViewPartial_inv_det.GetEditor("IdUnidadMedida_sinConversion").PerformCallback();
+                SetUnidadMedida(s, e);
+            }
         }
 
         function UnidadMedidaComboBox_BeginCallback(s, e) {
-            e.customArgs["in_IdProducto"] = IdProducto.GetValue();
+            if (s.GetValue() != 0) {
+                e.customArgs["in_IdProducto"] = IdProducto.GetValue();
+            }
         }
 
         function SetUnidadMedida(s, e) {
