--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Anular.cshtml
@@ -31,7 +31,7 @@
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="CodMoviInven">Código</label>
+                    <label for="CodMoviInven"># OP</label>
                     @Html.TextBoxFor(q => q.CodMoviInven, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.CodMoviInven, "", new { @class = "text-danger" })
                 </div>
