--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_019.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_019.cshtml
@@ -129,7 +129,7 @@
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
-                        <label for="">Fecha corte</label>
+                        <label for="">Fecha inicio</label>
                         <div class="input-group date">
                             <div class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
